--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
 		"@sveltejs/adapter-static": "^3.0.6",
+		"@sveltejs/enhanced-img": "^0.4.4",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
@@ -36,8 +37,12 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
+		"@fontsource/londrina-solid": "^5.1.0",
+		"@fontsource/poppins": "^5.1.0",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15"
+		"@tailwindcss/typography": "^0.5.15",
+		"lucide-svelte": "^0.469.0",
+		"posthog-js": "^1.203.1"
 	}
 }
